2003-03-26  Havoc Pennington  <hp@redhat.com>

	* configure.in: bump to 2.3.1

	Apply "local locks" patch with linc_get_tmpdir modification from
	Michael, and the default changed to local locks. Now to 
	get global locks you must set GCONF_GLOBAL_LOCKS=1.

	* gconf/gconf-internals.c (gconf_log): convert to locale encoding
	to pass stuff to syslog

2003-03-26  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "yi" to ALL_LINGUAS.

2003-03-14  Mark McLoughlin  <mark@skynet.ie>

	Basically the same patch as the previous one .. but
	for the markup backend.

	* backends/markup-backend.c:
	(resolve_address): update.
	(clear_cache): use markup_tree_rebuild() instead of
	re-creating the tree.
	(ms_new): remove the read_only arg and s/markup_tree_new/
	markup_tree_get/
	(ms_destroy): s/markup_tree_free/markup_tree_unref/

	* backends/markup-tree.[ch]:
	(markup_tree_get), (markup_tree_unref): rename these
	from new()/free() and share caches for sources with
	the same root directory.
	(markup_tree_rebuild): impl.
	(markup_dir_needs_sync): we don't keep the read_only
	flag per-tree anymore so don't check it here.

2002-07-16  Mark McLoughlin  <mark@skynet.ie>

	Use the same cache for multiple sources with the same
	root directory.

	* backends/xml-cache.[ch]:
	(cache_get): rename from cache_new and return and existing
	cache for this root dir if one exists. Also use g_free
	as a key destroy handler for the nonexistant hash instead
	of doing it manually.
	(cache_unref): rename from cache_destroy and only destroy
	when refcount drops to zero.
	(cache_set_nonexistent), (cache_destroy_nonexistant_foreach):
	don't free the key here.

	* backends/xml-backend.c:
	(xs_new): s/cache_new/cache_get/
	(xs_destroy): s/cache_destroy/cache_unref/.

2003-03-14  Mark McLoughlin  <mark@skynet.ie>

	* backends/Makefile.am: kill unused bdb SOURCES.

2003-03-13  Mark McLoughlin  <mark@skynet.ie>

	Implement --load and --dump options for gconftool. e.g.: