@@ -2781,6 +2781,13 @@ gconf_orb_release (void)
 char*
 gconf_get_daemon_dir (void)
 {
+  static gboolean set_tmpdir = FALSE;
+  if (!set_tmpdir)
+    {
+      linc_set_tmpdir (g_get_tmp_dir ());
+      set_tmpdir = TRUE;
+    }
+  
   if (gconf_use_local_locks ())
     return linc_get_tmpdir ();
   else
