@@ -1,3 +1,8 @@
+2003-03-26  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/gconf-internals.c (gconf_get_daemon_dir): call
+	linc_set_tmpdir() to maybe make it work
+
 2003-03-26  Havoc Pennington  <hp@redhat.com>
 
 	* configure.in: bump to 2.3.1
